--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Kim Sean Pusod - Software Engineer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/self.png"/>
+    <meta name="description" content="Innovative tech mind with five years of experience in developing modern applications. I am fully competent in software development methodologies and have extensive experience in front end development, with proficiency in back end development.">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
