--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Kim Sean Pusod - Software Engineer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/self.png"/>
+    <meta property="og:image" content="kimsean.github.io/self.png"/>
     <meta name="description" content="Innovative tech mind with five years of experience in developing modern applications. I am fully competent in software development methodologies and have extensive experience in front end development, with proficiency in back end development.">
     <!--
       manifest.json provides metadata used when your web app is installed on a
